publish: Fix some typos
generated from commit 6de75145f3da629874a8eb51cc7623707fb01e4a

--- a/index.html
+++ b/index.html
@@ -753,11 +753,11 @@ Remember to include your authentication header!
 </tr>
 <tr>
 <td>order_lines</td>
-<td>An array of JSOn objects detailing each line on the order</td>
+<td>An array of JSON objects detailing each line on the order</td>
 </tr>
 <tr>
 <td>status</td>
-<td>The current status of the order line. A detailed list of order status is given below</td>
+<td>The current status of the order line. A detailed list of order line statuses is given below</td>
 </tr>
 <tr>
 <td>description</td>
