publish: Fix some typos on the error page
generated from commit da864b143c4d2dada55a81dd545fb3e42c7b80a9

--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@ Please note that the dispatch_info, tracking_url, tracking_info, and serial_no f
 </span><span class="p">}</span><span class="w">
 </span></code></pre>
 <blockquote>
-<p>If the error relates to JSON Objects failing validation i.e a field is too long or has an invalid quantity then the JSON will be structed like this:</p>
+<p>If the error relates to JSON Objects failing validation i.e. a field is too long or has an invalid quantity then the JSON will be structured like this:</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
     </span><span class="s2">"code"</span><span class="p">:</span><span class="w"> </span><span class="mi">400</span><span class="p">,</span><span class="w">
@@ -1177,7 +1177,7 @@ Please note that the dispatch_info, tracking_url, tracking_info, and serial_no f
 </tr>
 <tr>
 <td>500</td>
-<td>Internal Server Error -- We had a problem with our server. Try again later.</td>
+<td>Internal Server Error -- We&#39;ve had a problem with our server. Try again later.</td>
 </tr>
 </tbody></table>
 
