publish: Fix some typos
generated from commit a7ee98113a970df2c82ce64004033250090de011

--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@ Changing your password will invalidate all tokens currently associated with your
 </thead><tbody>
 <tr>
 <td>skus</td>
-<td>An array of JSON objects containing stok information</td>
+<td>An array of JSON objects containing stock information</td>
 </tr>
 <tr>
 <td>sku</td>
-<td>The sku of the product</td>
+<td>The SKU of the product</td>
 </tr>
 <tr>
 <td>description</td>
@@ -616,7 +616,7 @@ Remember to include your authentication header!
 </thead><tbody>
 <tr>
 <td>sku</td>
-<td>The sku of the product</td>
+<td>The SKU of the product</td>
 </tr>
 <tr>
 <td>description</td>
