publish: change word
generated from commit 7a34ebcc02042268297add82c34a9cc3ea322180

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ You must replace the email and password with your specific account details.
 <tr>
 <td>new_password</td>
 <td>yes</td>
-<td>The password which you wish to change to. Min length 16, max length 50</td>
+<td>The password that you wish to change to. Min length 16, max length 50</td>
 </tr>
 </tbody></table>
 
